# truthchain

./: .env.example  .gitignore  CONTINUE_SESSION.md  QUICKSTART.md  QUICKSTART_WEEK_5.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  TEST_EXAMPLES.md  WEEK_11-12_SUMMARY.md  WEEK_13-14_SUMMARY.md  WEEK_3-4_SUMMARY.md  WEEK_5-6_SUMMARY.md  WEEK_7-8_SUMMARY.md  WEEK_9-10_SUMMARY.md  check_logs.py  demo_advanced_features.py  demo_statistical_features.py  docker-compose.prod.yml  docker-compose.yml  quick_setup.ps1  setup_local_db.bat  setup_local_db.ps1  start_server.ps1  test_advanced_features.py  test_auth.py  test_dhaka_weather.py  test_gap1_semantic.py  test_gap2_web_verify.py  test_gap3_anomaly_ml.py  test_gap4_autocorrector.py  test_gap5_external_ref.py  test_gap6_llm_proxy.py  test_gap7_js_sdk.js  test_production_features.py  test_realtime_sehri.py  test_statistical_features.py  test_week7_8.py
backend/: .env.example  Dockerfile  __init__.py  alembic.ini  create_tables.sql  init_db.py  requirements.txt  test_db_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 003_audit_logs.py  004_api_key_prefix.py  005_subscription_billing.py  e89d6a10bbb6_initial_migration.py
backend/api/: __init__.py  dependencies.py  main.py
backend/api/routes/: analytics.py  auth.py  billing.py  health.py  proxy.py  validation.py
backend/config/: __init__.py  settings.py
backend/core/: __init__.py  analytics.py  anomaly_detector.py  audit_logger.py  auth.py  auto_corrector.py  cache.py  confidence_scorer.py  context_manager.py  external_reference.py  health_checker.py  llm_proxy.py  ml_anomaly_detector.py  rate_limiter.py  rule_engine.py  schema_validator.py  semantic_validator.py  statistical_analyzer.py  validation_engine.py  web_verifier.py
backend/db/: __init__.py  base.py  connection.py
backend/models/: __init__.py  api_key.py  audit_log.py  organization.py  validation_log.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/analytics/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Sidebar.tsx  StatCard.tsx
sdk/python/: LICENSE  README.md  demo.py  finance_demo.py  groq_demo.py  pyproject.toml
sdk/python/truthchain/: __init__.py  client.py  exceptions.py  models.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  demo.ts  errors.ts  index.ts  types.ts
(+6 files in other folders)
